Moved img/ to root ;; Fixed links to images

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
         Use www.armagansalman.one when it has a dedicated server, not Github.
      -->
 		<link href="./file/styles.css" rel="stylesheet"/>
-		<link href="./file/img/william_blake_albion-cropped-64x64.jpg" rel="icon" type="image/png"/>
+		<link href="./img/william_blake_albion-cropped-64x64.jpg" rel="icon" type="image/png"/>
 		<!-- TODO(Use personal domain instead of github for internal links when https is used on personal server) http://www.armagansalman.one -> https://armagansalman.github.io  -->
 		<style>
 		</style>
@@ -189,13 +189,13 @@
 				https://ink-the-artist.tumblr.com/post/170514509338/my-local-gas-station
 				</a>
 			</p>
-			<img alt="Borzoi-art-1-_ink-the-artist.tumblr_.png" height="100%" src="./file/img/Borzoi-art-1-_ink-the-artist.tumblr_.png" width="100%"/>
-			<img alt="Borzoi-art-2-_ink-the-artist.tumblr_.png" height="100%" src="./file/img/Borzoi-art-2-_ink-the-artist.tumblr_.png" width="100%"/>
+			<img alt="Borzoi-art-1-_ink-the-artist.tumblr_.png" height="100%" src="./img/Borzoi-art-1-_ink-the-artist.tumblr_.png" width="100%"/>
+			<img alt="Borzoi-art-2-_ink-the-artist.tumblr_.png" height="100%" src="./img/Borzoi-art-2-_ink-the-artist.tumblr_.png" width="100%"/>
 			<hr/>
 			<!-- HEADING END -->
 		</section>
-		<img alt="Borzoi-shining-_ink-the-artist.tumblr_.jpg" height="100%" src="./file/img/Borzoi-shining-_ink-the-artist.tumblr_.jpg" width="100%"/>
-		<img alt="Pet and ." height="100%" src="./file/img/wallhaven-nkkwwm.jpg" width="100%"/>
+		<img alt="Borzoi-shining-_ink-the-artist.tumblr_.jpg" height="100%" src="./img/Borzoi-shining-_ink-the-artist.tumblr_.jpg" width="100%"/>
+		<img alt="Pet and ." height="100%" src="./img/wallhaven-nkkwwm.jpg" width="100%"/>
 		<a href="https://home.social/@armagangng" rel="me">
 		</a>
 		<a href="https://www.youtube.com/watch?v=P3ynj6w2tII">
@@ -205,7 +205,7 @@
 		<!-- https://www.youtube.com/watch?v=xP7XuE1Fw9s
 		Nina Simone - Sinnerman
 		-->
-		<!-- <img src="./file/img/Borzoi-the-end-_ink-the-artist.tumblr_.jpg" alt="Abyss-1" width="100%" height="100%"> -->
-		<!-- <img src="./file/img/Mask-cropped-export-40.jpg" alt="Abyss-0" width="100%" height="100%"> -->
+		<!-- <img src="./img/Borzoi-the-end-_ink-the-artist.tumblr_.jpg" alt="Abyss-1" width="100%" height="100%"> -->
+		<!-- <img src="./img/Mask-cropped-export-40.jpg" alt="Abyss-0" width="100%" height="100%"> -->
 	</body>
 </html>
