Updated Duplicate Finder link

--- a/index.html
+++ b/index.html
@@ -107,11 +107,9 @@
 						</div>
 						<div>
 						Duplicate File Finder (for local files)
-							<br/>
-						(in progress)
 						</div>
 						<div>
-							<a href="https://github.com/armagansalman/exp_dup_finder">
+							<a href="https://bitbucket.org/armaganymmt/filedups/src/main/">
 							( Link )
 							</a>
 						</div>
