Çevirinin link yapısı ref/R_2 şeklinde güncellendi

--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
 						(in progress)
 						</div>
 						<div>
-							<a href="./ref/2/name/insanin-dusundugu-sekilde.james-allen/index.html">
+							<a href="./ref/R_2/R_2.html?tanim=Insanin-Dusundugu-Sekilde&asil-tanim=As-a-Man-Thinketh&asil-yazar=James-Allen">
 							( Link )
 							</a>
 						</div>
