Translated more of ref/R_2 ;; changed link of ref/R_2

--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
 						(in progress)
 						</div>
 						<div>
-							<a href="./ref/R_2/R_2.html?tanim=Insanin-Dusundugu-Sekilde&asil-tanim=As-a-Man-Thinketh&asil-yazar=James-Allen">
+							<a href="./ref/R_2/R_2.html?tanim=Insanin-Dusundugu-Sekilde&orijinal-eser=As-a-Man-Thinketh&orijinal-yazar=James-Allen">
 							( Link )
 							</a>
 						</div>
