Updated info on T.B.Y.

--- a/ref/R_3/R_3.html
+++ b/ref/R_3/R_3.html
@@ -38,7 +38,7 @@
 			T.B.Y. is a wise helper. It is a humanoid system with wisdom, intelligence and means of perception.
 			<br/>By definition, it is innately benevolent.
 			<br/>By definition, it can not be coerced. It protects itself.
-			<br/>It is nowhere near completion. Only its main goal is defined for now (2023-02-03).
+			<br/>It is nowhere near completion. It is vaguely defined for now (2023-02-03).
 		</p>
 		<div>
 		☉ <a href="https://github.com/armagansalman/T.B.Y.">https://github.com/armagansalman/T.B.Y.</a>
