Çeviride (As a Man Thinketh) ilerlendi (1. bölüm son paragrafa gelindi).

--- a/ref/R_2/R_2.html
+++ b/ref/R_2/R_2.html
@@ -154,19 +154,16 @@
     <p>
     İnsan her zaman ustadır, en güçsüz ve en terk edilmiş halinde bile; ama bu
     güçsüz ve alçalmış halde o kendi "konağını" yanlış yöneten aptal bir ustadır.
-    
-    !DEVAM!
-    Man is always the master, even in his weaker and most abandoned state; but 
-    in his weakness and degradation he is the foolish master who misgoverns his 
-    "household." When he begins to reflect upon his condition, and to search 
-    diligently for the Law upon which his being is established, he then becomes 
-    the wise master, directing his energies with intelligence, and fashioning 
-    his thoughts to fruitful issues. Such is the conscious master, and man can 
-    only thus become by discovering within himself the laws of thought; which 
-    discovery is totally a matter of application, self analysis, and experience.
+    Kişi kendi koşullarına kafa yormaya başladığında, ve kendi varlığını oluşturan
+    Yasa'yı özenle aradığında, o zaman enerjisini akıllı bir şekilde yönlendirerek,
+    ve düşüncelerini yararlı konular üstüne biçimlendirerek, akıllı ustaya dönüşür, 
+    Böyle olan kişi bilinçli ustadır, ve insan yalnızca kendi içindeki düşüncenin
+    yasalarını keşfederek bu hale gelir; öyle ki bu keşif tamamen bir uygulama,
+    kişisel analiz ve deneyim konusudur.
     </p>
     
     <p>
+    !DEVAM!
     Only by much searching and mining, are gold and diamonds obtained, and man 
     can find every truth connected with his being, if he will dig deep into the 
     mine of his soul; and that he is the maker of his character, the moulder of 
