Çeviride (As a Man Thinketh) ilerlendi (1. bölüm son paragraf).

--- a/ref/R_2/R_2.html
+++ b/ref/R_2/R_2.html
@@ -163,6 +163,11 @@
     </p>
     
     <p>
+    Yalnızca önemli ölçüde arama ve kazı sonrası altın ve elmaslar elde edilir, ve
+    insan kendi varlığıyla ilgili tüm gerçeği bulabilir, eğer kendi ruh madeninin
+    derinliklerine doğru kazarsa bu geçerlidir; ve kişi kendi karakterini yapandır,
+    hayatına biçim verendir, kendi kaderini inşa edendir, 
+    
     !DEVAM!
     Only by much searching and mining, are gold and diamonds obtained, and man 
     can find every truth connected with his being, if he will dig deep into the 
