Çeviri R_2'nin ch.7:p.2 paragrafı çevirildi.

--- a/ref/R_2/R_2.html
+++ b/ref/R_2/R_2.html
@@ -574,15 +574,15 @@
         <h3 id="ch.7">7. Serenity</h3>
     <p id="ch.7:p.1">
         <p id="ch.7:p.2">
-        Aklın güzel mücevherlerinden biri SAKİNLİKTİR.
-        !DEVAM!
-        CALMNESS of mind is one of the beautiful jewels of wisdom. It is the 
-        result of long and patient effort in self-control. Its presence is an 
-        indication of ripened experience, and of a more than ordinary knowledge 
-        of the laws and operations of thought.
+        Aklın güzel mücevherlerinden biri SAKİNLİKtir. Bu kendine hakimiyet alanında
+        uzun ve sabırlı çabanın sonucudur. Onun varlığı olgunlaşmış deneyimin 
+        , ve düşüncenin yasaları ile süreçleri üstüne normalden fazla olan bilginin
+        belirtisidir.
         </p>
         
         <p id="ch.7:p.3">
+        
+        !DEVAM!
         A man becomes calm in the measure that he understands himself as a 
         thought evolved being, for such knowledge necessitates the understanding 
         of others as the result of thought, and as he develops a right understanding, 
