Changed 'small-text' style name ;; Removed extra info from R_ links ;; Updated date style in R_2.html and R_3.html

--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
 						(in progress)
 						</div>
 						<div>
-							<a href="./ref/R_3/R_3.html?desc=T.B.Y.&amp;create-date=2023-02-03">
+							<a href="./ref/R_3/R_3.html">
 							( Link )
 							</a>
 						</div>
@@ -129,7 +129,7 @@
 						(in progress)
 						</div>
 						<div>
-							<a href="./ref/R_2/R_2.html?tanim=Insanin-Dusundugu-Sekilde&orijinal-eser=As-a-Man-Thinketh&orijinal-yazar=James-Allen">
+							<a href="./ref/R_2/R_2.html">
 							( Link )
 							</a>
 						</div>
@@ -151,7 +151,7 @@
 			<h3 id="HEAD_4">
 			Not My Work
 			</h3>
-			<a href="./ref/R_8/R_8.html?desc=Not-My-Work&amp;create-date=2023-01">
+			<a href="./ref/R_8/R_8.html">
 			( Link )
 			</a>
 			<hr/>
@@ -160,7 +160,7 @@
 			<h3 id="HEAD_7">
 			Various Items
 			</h3>
-			<a href="./ref/R_5/R_5.html?desc=References&amp;create-date=2022-11">
+			<a href="./ref/R_5/R_5.html">
 			( Link )
 			</a>
 			<hr/>
