Changed index.html icon ;; Compressed Borzoi images

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
         Use www.armagansalman.one when it has a dedicated server, not Github.
      -->
 		<link href="./file/styles.css" rel="stylesheet"/>
-		<link href="./img/william_blake_albion-cropped-64x64.jpg" rel="icon" type="image/png"/>
+		<link href="./img/Monad.jpg" rel="icon" type="image/jpg"/>
 		<!-- TODO(Use personal domain instead of github for internal links when https is used on personal server) http://www.armagansalman.one -> https://armagansalman.github.io  -->
 		<style>
 		</style>
@@ -170,7 +170,7 @@
 			Tag Relations
 			</h3>
 			<p>
-			Under construction. This section will enable id and category (tag) tuples to be searched efficiently and easily.
+			This section will enable id and category (tag) tuples to be searched efficiently and easily.
 			</p>
 			<hr/>
 			<!-- HEADING END -->
@@ -193,17 +193,21 @@
 			<!-- HEADING END -->
 		</section>
 		<img alt="Borzoi-shining-_ink-the-artist.tumblr_.jpg" height="100%" src="./img/Borzoi-shining-_ink-the-artist.tumblr_.jpg" width="100%"/>
-		<img alt="Pet and ." height="100%" src="./img/wallhaven-nkkwwm.jpg" width="100%"/>
-		<a href="https://home.social/@armagangng" rel="me">
+		<img alt="Flower of Life" height="100%" src="./img/carlotheman_Flower_of_Life_Symbol.svg" width="100%"/>
+		
+        <a href="https://home.social/@armagangng" rel="me">
 		</a>
-		<a href="https://www.youtube.com/watch?v=P3ynj6w2tII">
+		
+        <a href="https://www.youtube.com/watch?v=P3ynj6w2tII">
 		Do not be afraid (Skeleton)
 			<!-- Schnappi Scary Skeletons -->
 		</a>
-		<!-- https://www.youtube.com/watch?v=xP7XuE1Fw9s
+		
+        <!-- https://www.youtube.com/watch?v=xP7XuE1Fw9s
 		Nina Simone - Sinnerman
 		-->
 		<!-- <img src="./img/Borzoi-the-end-_ink-the-artist.tumblr_.jpg" alt="Abyss-1" width="100%" height="100%"> -->
 		<!-- <img src="./img/Mask-cropped-export-40.jpg" alt="Abyss-0" width="100%" height="100%"> -->
-	</body>
+	
+    </body>
 </html>
