Çevirildi: ref/R_2 , ch.2:p.7

--- a/ref/R_2/R_2.html
+++ b/ref/R_2/R_2.html
@@ -254,13 +254,12 @@
     </p>
     
     <p id="ch.2:p.7">
-    !DEVAM!
-    That circumstances grow out of thought every man knows who has for any length 
-    of time practised self-control and self-purification, for he will have noticed 
-    that the alteration in his circumstances has been in exact ratio with his altered 
-    mental condition. So true is this that when a man earnestly applies himself to 
-    remedy the defects in his character, and makes swift and marked progress, he 
-    passes rapidly through a succession of vicissitudes.
+    Kendine hakimiyet ve kendini saflaştırma konusunda herhangi bir süre pratik 
+    yapmış kişi durumların düşüncelerden ortaya çıktığını bilir, durumlarındaki 
+    değişimin mental durumundaki değişim ile birebir orantılı olduğunu fark ettiği 
+    için bu böyledir. Bu o kadar doğrudur ki insan karakterindeki kusurları düzeltmek 
+    için ciddiyetle kendini verdiğinde, ve hızlı ve belirgin gelişim yaptığında, 
+    hızla ardı ardına dönüşümlerden geçer.
     </p>
     
     <p id="ch.2:p.8">
