--- a/ref/R_2/R_2.html
+++ b/ref/R_2/R_2.html
@@ -289,24 +289,20 @@
     </p>
     
     <p id="ch.2:p.12">
-    !DEVAM!
-    A man does not come to the almshouse or the jail by the tyranny of fate or 
-    circumstance, but by the pathway of grovelling thoughts and base desires. Nor 
-    does a pure-minded man fall suddenly into crime by stress of any mere external 
-    force; the criminal thought had long been secretly fostered in the heart, and 
-    the hour of opportunity revealed its gathered power. Circumstance does not 
-    make the man; it reveals him to himself No such conditions can exist as 
-    descending into vice and its attendant sufferings apart from vicious 
-    inclinations, or ascending into virtue and its pure happiness without the 
-    continued cultivation of virtuous aspirations; and man, therefore, as the 
-    lord and master of thought, is the maker of himself the shaper and author of 
-    environment. Even at birth the soul comes to its own and through every step 
-    of its earthly pilgrimage it attracts those combinations of conditions which 
-    reveal itself, which are the reflections of its own purity and, impurity, its 
-    strength and weakness.
+    Kişi yaşlılar evine veya cezaevine kaderin veya durumların tiranlığı sayesinde gelmez,
+    aşağı düşünceler ve dip arzuların yoluyla gelir. Ya da saf-zihinli biri herhangi dış etken 
+    yüzünden aniden suça kaymaz; suçlu düşünce uzun zamandır kalpte gizlice büyütülmüştür, 
+    ve fırsatı geldiğinde topladığı gücü açığa çıkarmıştır. Durumlar insanı belirlemez; 
+    onu kendine belli eder. Kötülüğe inme ve onunla gelen acılar kötü niyetli eğilim dışında 
+    hiçbir durumla olamaz, veya erdemli niyetlerin sürekli yetiştirilmesi olmadan 
+    kişi erdeme yükselemez;  ve insan, böylece, düşüncenin lordu ve ustasıdır, kendini 
+    yapandır ve çevresinin yazarıdır. Doğumda bile ruh kendine gelir ve dünyevi 
+    kutsal yolculuğunda kendini ortaya çıkaran durumların kombinasyonlarını kendine çeker, 
+    bunlar ki onun kendi saflığı, kirliliği, kendi gücü ve güçsüzlüğüdür.
     </p>
     
     <p id="ch.2:p.13">
+    !DEVAM!
     Men do not attract that which they want, but that which they are. Their whims, 
     fancies, and ambitions are thwarted at every step, but their inmost thoughts 
     and desires are fed with their own food, be it foul or clean. The "divinity 
