Eklendi: ref/R_2 için detaylı lisans açıklaması.

--- a/ref/R_2/R_2.html
+++ b/ref/R_2/R_2.html
@@ -41,6 +41,9 @@
             <img alt="Creative Commons License" style="border-width:0" src="https://i.creativecommons.org/l/by-nc/4.0/88x31.png" />
             </a>
             <br />This work is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by-nc/4.0/">Creative Commons Attribution-NonCommercial 4.0 International License</a>.
+            <br /><br />Bu çeviri veya türevleri para ile satılamaz. Çeviriyi kullanmak isterseniz kendi eserinizde alttaki iki satırı eklemelisiniz:
+            <br />Bu çevirinin orijinali Armağan Salman'a ithaf edilmiştir.
+            <br />www.armagansalman.one/ref/R_2/R_2.html web adresinden çevirinin orijinaline erişilebilir.
     </p>
     
     <hr>
