Çevirildi: ref/R_2 , ch.2:p.13

--- a/ref/R_2/R_2.html
+++ b/ref/R_2/R_2.html
@@ -305,19 +305,18 @@
     </p>
     
     <p id="ch.2:p.13">
-    !DEVAM!
-    Men do not attract that which they want, but that which they are. Their whims, 
-    fancies, and ambitions are thwarted at every step, but their inmost thoughts 
-    and desires are fed with their own food, be it foul or clean. The "divinity 
-    that shapes our ends" is in ourselves; it is our very self. Only himself 
-    manacles man: thought and action are the gaolers of Fate—they imprison, 
-    being base; they are also the angels of Freedom—they liberate, being noble. 
-    Not what he wishes and prays for does a man get, but what he justly earns. 
-    His wishes and prayers are only gratified and answered when they harmonize 
-    with his thoughts and actions.
+    İnsanlar istediklerini değil, oldukları şeyi kendilerine çekerler. Onların heveslerine, zevklerine, 
+    ve hırslarına her adımda engel olunur, ama en içlerindeki düşünce ve arzular 
+    kendi yiyecekleriyle beslenir, pis ya da temiz olması fark etmez. "Sonuçlarımızı 
+    şekillendiren kutsallık" içimizdedir; o kendimizin ta kendisidir. Kişiyi ancak 
+    kendi kelepçeleyebilir: düşünce ve davranış kaderin gardiyanlarıdır—diptelerse hapsederler;
+    onlar aynı zamanda Özgürlüğün melekleridir—soylularsa özgürleştirirler. İnsanın 
+    elde ettiği isteği veya dua ettiği değildir, hak ederek kazandığıdır. Onun istekleri 
+    ve duaları kendi düşünce ve davranışlarıyla uyum içindeyse gerçekleşir ve kabul olur.
     </p>
     
     <p id="ch.2:p.14">
+    !DEVAM!
     In the light of this truth, what, then, is the meaning of "fighting against 
     circumstances?" It means that a man is continually revolting against an effect 
     without, while all the time he is nourishing and preserving its cause in his 
