Çevirildi: ref/R_2 , ch.2:p.14

--- a/ref/R_2/R_2.html
+++ b/ref/R_2/R_2.html
@@ -316,13 +316,12 @@
     </p>
     
     <p id="ch.2:p.14">
+    Bu gerçeğin ışığında, öyleyse "durumlara karşı savaşmak" nedir? Bunun anlamı kişinin
+    sürekli olarak dışarıdaki bir etkiye başkaldırmasıdır, aynı zamanda onun sebebini 
+    kalbinde yetiştirdiği ve koruduğu halde. O sebep kendini bilinçli bir kötülük olarak 
+    veya bilinçsiz bir zayıfık olarak gösterebilir; ama ne olursa olsun, sahibini inatla 
+    frenler, bu yüzden de çareyi bağırarak arar.
     !DEVAM!
-    In the light of this truth, what, then, is the meaning of "fighting against 
-    circumstances?" It means that a man is continually revolting against an effect 
-    without, while all the time he is nourishing and preserving its cause in his 
-    heart. That cause may take the form of a conscious vice or an unconscious 
-    weakness; but whatever it is, it stubbornly retards the efforts of its 
-    possessor, and thus calls aloud for remedy.
     </p>
     
     <p id="ch.2:p.15">
