Çevirildi: ref/R_2 , ch.2:p.15

--- a/ref/R_2/R_2.html
+++ b/ref/R_2/R_2.html
@@ -324,17 +324,16 @@
     </p>
     
     <p id="ch.2:p.15">
-    !DEVAM!
-    Men are anxious to improve their circumstances, but are unwilling to improve 
-    themselves; they therefore remain bound. The man who does not shrink from 
-    self-crucifixion can never fail to accomplish the object upon which his heart 
-    is set. This is as true of earthly as of heavenly things. Even the man whose 
-    sole object is to acquire wealth must be prepared to make great personal 
-    sacrifices before he can accomplish his object; and how much more so he who 
-    would realize a strong and well-poised life?
+    İnsanlar durumlarını geliştirmek için endişe içindedir, ama kendilerini değiştirmek 
+    istemezler; onlar bu yüzden bağlı kalır. Kendini çarmıha germekten çekinmeyen kişinin 
+    kalbinin belirlediğine ulaşmaması mümkün değildir. Bu dünyevi olduğu kadar kutsal 
+    şeyler için de geçerlidir. Tek amacı büyük zenginlik olan birinin bile hedefine 
+    ulaşmak için büyük kişisel fedakarlık yapmaya hazır olması gerekir; ve güçlü ve 
+    iyi-dengeli bir hayat için daha ne kadar fazlasını vermelidir?
     </p>
     
     <p id="ch.2:p.16">
+    !DEVAM!
     Here is a man who is wretchedly poor. He is extremely anxious that his 
     surroundings and home comforts should be improved, yet all the time he shirks 
     his work, and considers he is justified in trying to deceive his employer on 
