Çevirildi: ref/R_2 , ch.2:p.16

--- a/ref/R_2/R_2.html
+++ b/ref/R_2/R_2.html
@@ -333,18 +333,16 @@
     </p>
     
     <p id="ch.2:p.16">
-    !DEVAM!
-    Here is a man who is wretchedly poor. He is extremely anxious that his 
-    surroundings and home comforts should be improved, yet all the time he shirks 
-    his work, and considers he is justified in trying to deceive his employer on 
-    the ground of the insufficiency of his wages. Such a man does not understand 
-    the simplest rudiments of those principles which are the basis of true 
-    prosperity, and is not only totally unfitted to rise out of his wretchedness, 
-    but is actually attracting to himself a still deeper wretchedness by dwelling 
-    in, and acting out, indolent, deceptive, and unmanly thoughts.
+    Çok fakir birini ele alalım. Çevresinin ve evindeki komforun gelişmesi için 
+    aşırı endişeli, ancak sürekli işten kaytarıyor, ve iş verenini aldığı ücretin 
+    yetersizliğinden dolayı kandırmayı haklı görüyor. Böylesi bir insan gerçek refahın 
+    en basit temel bilgilerinin prensiplerini anlamamıştır, ve kendi sefaletinden yükselip 
+    kurtulmaya hiç müsait değildir, Tembel, yanıltıcı, korkak düşüncelere dalıp onları 
+    yaparak aslında kendine daha derin bir sefaleti çekiyordur.
     </p>
     
     <p id="ch.2:p.17">
+    !DEVAM!
     Here is a rich man who is the victim of a painful and persistent disease as 
     the result of gluttony. He is willing to give large sums of money to get rid 
     of it, but he will not sacrifice his gluttonous desires. He wants to gratify 
