Anasayfadaki R_2 için çeviri durumu ibaresi güncellendi.

--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
 						<div>
 						İnsanın Düşündüğü Şekilde (As a Man Thinketh, James Allen)
 							<br/>
-						(in progress)
+						(çeviri sürüyor)
 						</div>
 						<div>
 							<a href="./ref/R_2/R_2.html">
