Eklendi: ref/R_2 için başlıklara çeviri durumu.

--- a/ref/R_2/R_2.html
+++ b/ref/R_2/R_2.html
@@ -67,12 +67,12 @@
     <ol start="0">
     <li><a href="#ch.0">Önsöz</a></li>
     <li><a href="#ch.1">Düşünce ve Karakter</a></li>
-    <li><a href="#ch.2">Düşüncenin Durumlar Üzerine Etkisi</a></li>
-    <li><a href="#ch.3">Düşüncenin Sağlık ve Vücut Üzerine Etkisi</a></li>
-    <li><a href="#ch.4">Düşünce ve Amaç</a></li>
-    <li><a href="#ch.5">Başarıda Düşünce Faktörü</a></li>
-    <li><a href="#ch.6">Vizyonlar ve İdealler</a></li>
-    <li><a href="#ch.7">Huzur</a></li>
+    <li><a href="#ch.2">Düşüncenin Durumlar Üzerine Etkisi</a>(Çeviri Tamamlanmadı)</li>
+    <li><a href="#ch.3">Düşüncenin Sağlık ve Vücut Üzerine Etkisi</a>(Çeviriye Başlanmadı)</li>
+    <li><a href="#ch.4">Düşünce ve Amaç</a>(Çeviriye Başlanmadı)</li>
+    <li><a href="#ch.5">Başarıda Düşünce Faktörü</a>(Çeviriye Başlanmadı)</li>
+    <li><a href="#ch.6">Vizyonlar ve İdealler</a>(Çeviriye Başlanmadı)</li>
+    <li><a href="#ch.7">Huzur</a>(Çeviriye Başlanmadı)</li>
     </ol>
     <hr>
     <!-- HEADING END -->
@@ -207,7 +207,7 @@
     <hr>
     <!-- HEADING END -->
     
-        <h3 id="ch.2">2. Düşüncenin Durumlar Üzerine Etkisi</h3>
+        <h3 id="ch.2">2. Düşüncenin Durumlar Üzerine Etkisi (Tamamlanmadı)</h3>
     <p id="ch.2:p.1">
     KİŞİ'nin zihni bir bahçeye benzetilebilir, bu bahçe akıllıca işlenmiş olabilir
     veya kontrolsüz büyümesine izin verilmiş olabilir; ancak işlenmiş ya da ilgilenmemiş
