Created ref/R_4 (filedups webpage)

--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
 						Duplicate File Finder (for local files)
 						</div>
 						<div>
-							<a href="https://bitbucket.org/armaganymmt/filedups/src/main/">
+							<a href="./ref/R_4/R_4.html">
 							( Link )
 							</a>
 						</div>
