Updated filedups link on main page

--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
 						2023-01-21
 						</div>
 						<div>
-						Duplicate File Finder (for local files)
+						filedups (Duplicate file finder for local files)
 						</div>
 						<div>
 							<a href="./ref/R_4/R_4.html">
