--- a/ref/R_2/R_2.html
+++ b/ref/R_2/R_2.html
@@ -545,11 +545,10 @@
     
     <h3 id="ch.3">3. Düşüncenin Sağlık ve Vücut Üzerine Etkisi</h3>
         <p id="ch.3:p.1">
-        THE body is the servant of the mind. It obeys the operations of the 
-        mind, whether they be deliberately chosen or automatically expressed. At 
-        the bidding of unlawful thoughts the body sinks rapidly into disease and 
-        decay; at the command of glad and beautiful thoughts it becomes clothed 
-        with youthfulness and beauty.
+        Vücut zihnin hizmetkarıdır. zihnin operasyonlarına uyar, bilinçli bir şekilde
+        seçilmiş veya otomatik olarak ifade edilmiş olsa da. Kanunsuz düşüncelerin
+        emrinde vücut hızlıca hastalık ve çürümeye düşer; memnun ve güzel düşüncelerin
+        emrinde ise gençlik ve güzellikle giydirilir.
         </p>
         
         <p id="ch.3:p.2">
