--- a/ref/R_2/R_2.html
+++ b/ref/R_2/R_2.html
@@ -552,14 +552,13 @@
         </p>
         
         <p id="ch.3:p.2">
-        Disease and health, like circumstances, are rooted in thought. Sickly 
-        thoughts will express themselves through a sickly body. Thoughts of fear 
-        have been known to kill a man as speedily as a bullet, and they are 
-        continually killing thousands of people just as surely though less 
-        rapidly. The people who live in fear of disease are the people who get 
-        it. Anxiety quickly demoralizes the whole body, and lays it open to the, 
-        entrance of disease; while impure thoughts, even if not physically 
-        indulged, will soon shatter the nervous system.
+        Hastalığın ve sağlığın, durumlarda olduğu gibi, kökü düşüncededir. Hastalıklı
+        düşünceler kendilerini hasta bir vücutta ifade eder. Korku düşüncelerinin bir
+        insanı kurşun kadar hızlı öldürdüğü bilinir, ve onlar binlerce insanı da daha az
+        hızla öldürmeye devam ediyor. Hastalıktan korkan insanlar hastalık kapar.
+        Endişe tüm vücudu hızlıca demoralize eder, ve hastalığın girişine zemin hazırlar;
+        saf olmayan düşünceler ise, fiziksel olarak eyleme geçirilmese de, sinir 
+        sistemini yakın gelecekte yıkar.
         </p>
         
         <p id="ch.3:p.3">
