--- a/ref/R_2/R_2.html
+++ b/ref/R_2/R_2.html
@@ -562,10 +562,10 @@
         </p>
         
         <p id="ch.3:p.3">
-        Strong, pure, and happy thoughts build up the body in vigour and grace. 
-        The body is a delicate and plastic instrument, which responds readily to 
-        the thoughts by which it is impressed, and habits of thought will produce 
-        their own effects, good or bad, upon it.
+        Güçlü, saf, ve mutlu düşünceler vücudu dinçlik ve zarafet yönünden geliştirir.
+        Vücut hassas ve değişken bir enstrümandır, etkisi altına girdiği düşüncelere
+        hızlıca cevap verir, ve düşünce alışkanlıkları vücut üstüne kendi etkilerini 
+        gösterecektir, iyi veya kötü olsa da.
         </p>
         
         <p id="ch.3:p.4">
