--- a/ref/R_2/R_2.html
+++ b/ref/R_2/R_2.html
@@ -569,11 +569,11 @@
         </p>
         
         <p id="ch.3:p.4">
-        Men will continue to have impure and poisoned blood, so long as they 
-        propagate unclean thoughts. Out of a clean heart comes a clean life and a 
-        clean body. Out of a defiled mind proceeds a defiled life and a corrupt 
-        body. Thought is the fount of action, life, and manifestation; make the 
-        fountain pure, and all will be pure.
+        İnsan temiz olmayan düşünceleri devam ettirdikçe, saf olmayan ve zehirli 
+        kana sahip olmaya devam edecektir. Temiz bir kalpten temiz bir yaşam ve
+        temiz bir vücut ortaya çıkar. Kirlenmiş bir zihinden kirlenmiş bir yaşam ve
+        bozuk bir vücut türer. Düşünce eylemin, yaşamın ve tecellinin pınarıdır; 
+        pınarı saf yapın, ve her şey saf olacaktır.
         </p>
         
         <p id="ch.3:p.5">
