--- a/ref/R_2/R_2.html
+++ b/ref/R_2/R_2.html
@@ -577,14 +577,15 @@
         </p>
         
         <p id="ch.3:p.5">
-        Change of diet will not help a man who will not change his thoughts. When 
-        a man makes his thoughts pure, he no longer desires impure food.
+        Düşüncelerini değiştirmeyen birinin diyetini değiştirmesinin kişiye faydası
+         olmaz. Bir insan düşüncelerini saflaştırdığında, saf olmayan yiyecekleri 
+         istemez.
         </p>
         
         <p id="ch.3:p.6">
-        Clean thoughts make clean habits. The so-called saint who does not wash 
-        his body is not a saint. He who has strengthened and purified his thoughts 
-        does not need to consider the malevolent microbe.
+        Temiz düşünceler temiz alışkanlıklar yapar. Vücudunu yıkamayan aziz denen kişi
+        aziz değildir. Düşüncelerini güçlendirmiş ve saflaştırmış kişinin zararlı 
+        mikrobu dikkate almasına gerek yoktur.
         </p>
 
         <p id="ch.3:p.7">
