Düzeltildi: ref/R_2 ch.2:p.8

--- a/ref/R_2/R_2.html
+++ b/ref/R_2/R_2.html
@@ -267,8 +267,8 @@
     
     <p id="ch.2:p.8">
     Ruh kendinde gizlice barındırdığını çeker; sevdiğini de, ve korktuğunu da; 
-    el üstünde tuttuğu arzulara erişir; erdemli olmayan arzularının seviyesine düşer, 
-    - ve durumlar da ruhun kendi kendini dönmesinin aracıdır.
+    el üstünde tuttuğu arzulara erişir; erdemli olmayan arzularının seviyesine düşer
+    ,—ve durumlar da ruhun kendinde olanı teslim almasının aracıdır.
     </p>
     
     <p id="ch.2:p.9">
