Düzeltildi: ref/R_2 ch.2:p.11

--- a/ref/R_2/R_2.html
+++ b/ref/R_2/R_2.html
@@ -286,7 +286,7 @@
     
     <p id="ch.2:p.11">
     En derinindeki arzuları, büyük amaçları, düşünceleri takip edip de kendinin bunlarla 
-    domine edilmesine izin vererek, (saf olmayan hayallerin takip ederek veya azimle 
+    domine edilmesine izin vererek, (saf olmayan hayalleri takip ederek veya azimle 
     güçlü ve yüksek olan yolu yürüyerek), kişi sonunda onların meyvesine ve hayatının 
     dış durumlarının tamamlanmasına ulaşır.
     </p>
