index.html içinde Fakirlikten Zenginliğe kitabının çeviri durumu güncellendi

--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
 						<div>
 						Fakirlikten Zenginliğe
 							<br/>
-						(Çeviri tamamlanmadı)
+						(Çeviriye başlanmadı)
 						</div>
 						<div>
 							<a href="./ref/R_1/R_1.html">
