Düzenlendi: ref/R_2 3. başlığın çeviri durumu

--- a/ref/R_2/R_2.html
+++ b/ref/R_2/R_2.html
@@ -68,7 +68,7 @@
     <li><a href="#ch.0">Önsöz</a></li>
     <li><a href="#ch.1">Düşünce ve Karakter</a></li>
     <li><a href="#ch.2">Düşüncenin Durumlar Üzerine Etkisi</a>(Çeviri Tamamlanmadı)</li>
-    <li><a href="#ch.3">Düşüncenin Sağlık ve Vücut Üzerine Etkisi</a>(Çeviriye Başlanmadı)</li>
+    <li><a href="#ch.3">Düşüncenin Sağlık ve Vücut Üzerine Etkisi</a>(Çeviriye Tamamlanmadı)</li>
     <li><a href="#ch.4">Düşünce ve Amaç</a>(Çeviriye Başlanmadı)</li>
     <li><a href="#ch.5">Başarıda Düşünce Faktörü</a>(Çeviriye Başlanmadı)</li>
     <li><a href="#ch.6">Vizyonlar ve İdealler</a>(Çeviriye Başlanmadı)</li>
