Düzeltildi: ref/R_1 çeviri başlığının Türkçe'si

--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
 						2023-04-14
 						</div>
 						<div>
-						Fakirlikten Zenginliğe (From poverty to power, James Allen)
+						Fakirlikten Güce (From poverty to power, James Allen)
 							<br/>
 						(Çeviriye başlanmadı)
 						</div>
