--- a/ref/R_1/R_1.html
+++ b/ref/R_1/R_1.html
@@ -10,7 +10,7 @@
     <!-- TODO(Use personal domain instead of github for internal links when https is used on personal server) http://www.armagansalman.one -> https://armagansalman.github.io  -->
     <style></style>
     
-    <title>Fakirlikten Zenginliğe; veya refah ve huzurun gerçekleştirilmesi (James Allen)</title>
+    <title>Fakirlikten Güce; veya refah ve huzurun gerçekleştirilmesi (James Allen)</title>
   </head>
   <body>
     
