Düzeltildi: ref/R_1 çeviri başlığının Türkçe'si

--- a/ref/R_1/R_1.html
+++ b/ref/R_1/R_1.html
@@ -20,7 +20,7 @@
     </p>
     <hr>
     
-        <h2 id="HEAD_1">Fakirlikten Zenginliğe; veya refah ve huzurun gerçekleştirilmesi</h2>
+        <h2 id="HEAD_1">Fakirlikten Güce; veya refah ve huzurun gerçekleştirilmesi</h2>
     
     <p>Orijinal başlık: From poverty to power; or, the realization of prosperity and peace
     <br/>Orijinal yazar: James Allen
