--- a/ref/R_2/R_2.html
+++ b/ref/R_2/R_2.html
@@ -844,8 +844,8 @@
     </p>
     
     <p id="ch.5:p.16">
-      He who would accomplish little must sacrifice little; he who would achieve 
-      much must sacrifice much; he who would attain highly must sacrifice greatly.
+    Az başarmak isteyen az feda etmeli; büyük başarı isteyen fazla feda etmeli;
+    yüksek dereceleri elde etmek isteyen fazlasıyla feda etmeli.
     </p>
     
     <hr>
