--- a/ref/R_8/R_8.html
+++ b/ref/R_8/R_8.html
@@ -23,7 +23,7 @@
    </h3>
    <ul>
     
-    <li id="R_8:2023-04-22:1">
+    <li id="urn:F-1:8:2023-04-22:1"> <!-- F-1 == ref-num:date:order-of-element -->
      <p>
       <div class="date-time-iso-8601">
        2023-04-22 ; 1
