--- a/ref/R_2/R_2.html
+++ b/ref/R_2/R_2.html
@@ -838,9 +838,9 @@
     </p>
     
     <p id="ch.5:p.15">
-      All achievements, whether in the business, intellectual, or spiritual world, 
-      are the result of definitely directed thought, are governed by the same law 
-      and are of the same method; the only difference lies in the object of attainment.
+    Tüm başarılar, iş, düşünsel, ya da spiritüel dünyada olsun, tamamiyle
+    yönlendirilmiş düşüncenin sonucudur, aynı kanun ile idare edilir ve aynı
+    metoddandır; tek fark ulaşılan nesnede yatmaktadır.
     </p>
     
     <p id="ch.5:p.16">
