--- a/ref/R_2/R_2.html
+++ b/ref/R_2/R_2.html
@@ -833,8 +833,9 @@
     </p>
     
     <p id="ch.5:p.14">
-      Victories attained by right thought can only be maintained by watchfulness. 
-      Many give way when success is assured, and rapidly fall back into failure.
+    Doğru düşünce ile elde edilen zaferler yalnızca tetikte olarak sürdürülebilir.
+    Çoğu kişi başarı kesinliştiğinde kontrolünü kaybeder, ve hızla yenilgiye geri
+    düşer.
     </p>
     
     <p id="ch.5:p.15">
