--- a/ref/R_2/R_2.html
+++ b/ref/R_2/R_2.html
@@ -827,9 +827,9 @@
     </p>
     
     <p id="ch.5:p.13">
-      A man may rise to high success in the world, and even to lofty altitudes in the 
-      spiritual realm, and again descend into weakness and wretchedness by allowing 
-      arrogant, selfish, and corrupt thoughts to take possession of him.
+    Bir kişi dünyada yüksek başarıya yükselebilir, hatta spiritüel alemdeki yüce 
+    rakımlara da, ve yine güçsüzlüğe ve perişanlığa küstah, bencil ve yozlaşmış
+    düşüncelerin kendini ele geçirmesine izin vererek alçalabilir.
     </p>
     
     <p id="ch.5:p.14">
