--- a/ref/R_2/R_2.html
+++ b/ref/R_2/R_2.html
@@ -763,8 +763,8 @@
     </p>
     
     <p id="ch.5:p.5">
-      He who has conquered weakness, and has put away all selfish thoughts, 
-      belongs neither to oppressor nor oppressed. He is free.
+    Zayıflığı yenmiş kişi, ve tüm bencil düşüncleri bir yana bırakan, zalim de
+    ezilen de değildir. O özgürdür.
     </p>
     
     <p id="ch.5:p.6">
