--- a/ref/R_2/R_2.html
+++ b/ref/R_2/R_2.html
@@ -768,9 +768,9 @@
     </p>
     
     <p id="ch.5:p.6">
-      A man can only rise, conquer, and achieve by lifting up his thoughts. 
-      He can only remain weak, and abject, and miserable by refusing to lift up 
-      his thoughts.
+    İnsan yalnızca düşüncelerini yükselterek yükselir, fetheder, ve başarır.
+    Yalnızca kendi düşüncelerini yükseltmeyi reddederek güçsüz, berbat ve perişan
+    kalır.
     </p>
     
     <p id="ch.5:p.7">
