ref/R_2 çeviri tamamlanmadı açıklaması eklendi ; Güncelleme tarihi güncellendi

--- a/ref/R_2/R_2.html
+++ b/ref/R_2/R_2.html
@@ -52,7 +52,7 @@
     
     <p>
     <div class="font-15px">
-		<span class="date-time-iso-8601 ; font-15px">2023-04-10</span> = Son güncelleme
+		<span class="date-time-iso-8601 ; font-15px">2023-05-05</span> = Son güncelleme
     </div>
     <div class="font-15px">
 		<span class="date-time-iso-8601 ; font-15px">2022-06-10</span> = Döküman başlangıcı
@@ -69,10 +69,10 @@
     <li><a href="#ch.1">Düşünce ve Karakter</a></li>
     <li><a href="#ch.2">Düşüncenin Durumlar Üzerine Etkisi</a>(Çeviri Tamamlanmadı)</li>
     <li><a href="#ch.3">Düşüncenin Sağlık ve Vücut Üzerine Etkisi</a>(Çeviri Tamamlanmadı)</li>
-    <li><a href="#ch.4">Düşünce ve Amaç</a>(Çeviriye Başlanmadı)</li>
-    <li><a href="#ch.5">Başarıda Düşünce Faktörü</a>(Çeviriye Başlanmadı)</li>
-    <li><a href="#ch.6">Vizyonlar ve İdealler</a>(Çeviriye Başlanmadı)</li>
-    <li><a href="#ch.7">Huzur</a>(Çeviriye Başlanmadı)</li>
+    <li><a href="#ch.4">Düşünce ve Amaç</a>(Çeviri Tamamlanmadı)</li>
+    <li><a href="#ch.5">Başarıda Düşünce Faktörü</a>(Çeviri Tamamlanmadı)</li>
+    <li><a href="#ch.6">Vizyonlar ve İdealler</a>(Çeviri Tamamlanmadı)</li>
+    <li><a href="#ch.7">Huzur</a>(Çeviri Tamamlanmadı)</li>
     </ol>
     <hr>
     
