Düzenlendi: Çeviri durumu, index.html'de R_2 için.

--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@
 						<div>
 						İnsanın Düşündüğü Şekilde (As a man thinketh, James Allen)
 							<br/>
-						(çeviri sürüyor)
+						(çeviri tamamlanmadı)
 						</div>
 						<div>
 							<a href="./ref/R_2/R_2.html">
