Çevirmen yerine çeviren kullanıldı. ref/R_2

--- a/ref/R_2/R_2.html
+++ b/ref/R_2/R_2.html
@@ -58,7 +58,7 @@
 		<span class="date-time-iso-8601 ; font-15px">2022-06-10</span> = Döküman başlangıcı
     </div>
     
-    <div class="font-15px">Çevirmen: Armağan Salman</div>
+    <div class="font-15px">Çeviren: Armağan Salman</div>
     </p>
     
     <hr>
