ref/R_4 filedups project moved to Github. Updated project link.

--- a/ref/R_2/R_2.html
+++ b/ref/R_2/R_2.html
@@ -77,7 +77,7 @@
     <hr>
     
     
-    <p>Şekle sokan ve yapan Hakim güç Zihindir,<br>
+    <p>Şekle sokan ve yapan Usta güç Zihindir,<br>
     Ve İnsan Zihindir, ve o ebediyen alır<br>
     Düşüncenin aracıdır, ve, istediğini şekillendirirerek,<br>
     Binlerce neşe, binlerce illet ortaya çıkarır:-<br>
