yazım yanlışı düzeltildi

--- a/ref/R_2/R_2.html
+++ b/ref/R_2/R_2.html
@@ -159,7 +159,7 @@
     <p>
     İnsan kendini yapar veya bozar; kendi düşünce fabrikasında kendini yok ettiği
     silahları yapar; aynı zamanda kendi tasarladığı aletlerle kendisi için 
-    neşe güç ve huzurdan cennetlik köşkler üretir. Düşüncenin doğru seçiimi ve
+    neşe güç ve huzurdan cennetlik köşkler üretir. Düşüncenin doğru seçimi ve
     doğru uygulanışıyla insan Kutsal Mükemmelliğe ulaşır; düşüncenin suistimali
     ve yanlış kullanımı ile, hayvandan düşük bir seviyeye iner. Bu iki ucun arasında
     karakterin tüm seviyeleri bulunur, ve kişi onların yapanı ve ustasıdır.
