ref/R_2 ch.2 tamamlanmadı yazısı kaldırıldı

--- a/ref/R_2/R_2.html
+++ b/ref/R_2/R_2.html
@@ -207,7 +207,7 @@
     <hr>
     <!-- HEADING END -->
     
-        <h3 id="ch.2">2. Düşüncenin Durumlar Üzerine Etkisi (Tamamlanmadı)</h3>
+        <h3 id="ch.2">2. Düşüncenin Durumlar Üzerine Etkisi</h3>
     <p id="ch.2:p.1">
     KİŞİ'nin zihni bir bahçeye benzetilebilir, bu bahçe akıllıca işlenmiş olabilir
     veya kontrolsüz büyümesine izin verilmiş olabilir; ancak işlenmiş ya da ilgilenmemiş
