ref/R_2 giriş kısmı güncellendi.

--- a/ref/R_2/R_2.html
+++ b/ref/R_2/R_2.html
@@ -79,7 +79,7 @@
     
     <p>Şekle sokan ve yapan Usta güç Zihindir,<br>
     Ve İnsan Zihindir, ve o ebediyen alır<br>
-    Düşüncenin aracıdır, ve, istediğini şekillendirirerek,<br>
+    Araç olan Düşünceyle, ve, istediğini şekillendirirerek,<br>
     Binlerce neşe, binlerce illet ortaya çıkarır:-<br>
     O gizlice düşünür, ve düşündüğü meydana gelir:<br>
     Çevresi onun aynasından başkası değildir.
