ref/R_1 için çeviri durumu anasayfada güncellendi

--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
 						<div>
 						Fakirlikten Güce (From poverty to power, James Allen)
 							<br/>
-						(Çeviriye başlanmadı)
+						(Çeviri tamamlanmadı)
 						</div>
 						<div>
 							<a href="./ref/R_1/R_1.html">
@@ -175,7 +175,7 @@
 						<div>
 						İnsanın Düşündüğü Şekilde (As a man thinketh, James Allen)
 							<br/>
-						(çeviri tamamlanmadı)
+						(Çeviri tamamlanmadı)
 						</div>
 						<div>
 							<a href="./ref/R_2/R_2.html">
