Patreon link added to main webpage

--- a/index.html
+++ b/index.html
@@ -32,6 +32,11 @@
 					<br/>
 				E-mail address (gmail) = armagansalman
 				</p>
+                <p>
+				☉ If you want to support me:
+					<br/>
+				Patreon = patreon.com/user?u=94872666
+				</p>
 			</p>
 			<hr/>
 			<!-- HEADING END -->
